# rose-glass

./: .gitignore  PROGRESS.md  README.md  ROADMAP.md  STATUS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: index.html  package.json  playwright.config.ts  vite.config.ts
apps/desktop/src/: main.tsx  webgpu.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: activity.rs  capture.rs  cluster.rs  commands.rs  embed.rs  fs_safe.rs  installer.rs  knn.rs  lib.rs  state.rs  terminal.rs  watcher.rs
apps/desktop/src-tauri/src/db/: mod.rs  queries.rs  schema.rs
apps/desktop/src-tauri/src/indexer/: hash.rs  mod.rs  parse.rs  pipeline.rs  resolve.rs
apps/desktop/src-tauri/tests/fixtures/vault/: a.md  b.md  c.md  notes.md.bak
apps/desktop/src-tauri/tests/fixtures/vault/.obsidian/: cfg.md
apps/desktop/src-tauri/tests/fixtures/vault/sub/: d.md
apps/desktop/src/activity/: ActivityPane.tsx  (+3 more)
docs/: HANDOFF.md  MORNING-REVIEW.md  THREAT-MODEL.md  agent-interface-findings.md  agent-interface.md  build-instructions.md  decisions.md  design-reference.html
docs/proof/: agent-interface-mcp-session.txt  phase10-mcp-session.txt  phase4-parity-verify.cjs  phase4-webgpu-verify.cjs  v2-graph-panel-verify.cjs
docs/superpowers/plans/: 2026-06-19-rose-glass-v2.3-leg1-settings.md  2026-06-19-rose-glass-v2.3-leg2-graph.md  2026-06-19-rose-glass-v2.3-leg3-reading-mode.md  2026-06-19-rose-glass-v2.3-leg4-tabs.md  2026-06-23-rose-glass-agent-interface.md
(+105 files in other folders)
