[package]
name = "desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# Two binaries exist (the app + the rose-glass-mcp sidecar); `cargo run` / `tauri dev`
# default to the app. Run the sidecar with `cargo run --bin rose-glass-mcp`.
default-run = "desktop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Read-only MCP sidecar (§14): serves `search` + `get_semantic_clusters` over the
# vault's index.db via JSON-RPC on stdio. Reuses desktop_lib::db (no SQL dup).
[[bin]]
name = "rose-glass-mcp"
path = "src/bin/mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
notify-debouncer-full = "0.5"
walkdir = "2.5"
blake3 = "1"
serde_yaml_ng = "0.10"
regex = "1"
tempfile = "3"
portable-pty = "0.8"
# Local ONNX embeddings (all-MiniLM, offline after a one-time model fetch) — Phase 11.
fastembed = { version = "5", features = ["hf-hub"] }

